--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
             <br>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://rankfortress.s3.amazonaws.com/Compounding+Pharmacy/index.html">https://rankfortress.s3.amazonaws.com/Compounding+Pharmacy/index.html</a><br>
                 <br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://rankfortresss.s3.us-east-005.backblazeb2.com/Compounding+Pharmacy/index.html">https://rankfortresss.s3.us-east-005.backblazeb2.com/Compounding+Pharmacy/index.html</a><br>
                 <br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://rankfortresss.s3.us-east-005.backblazeb2.com/Compounding+Pharmacy/index.html">https://rankfortresss.s3.us-east-005.backblazeb2.com/Compounding+Pharmacy/index.html</a><br>
                 <br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://rankfortressss.github.io/Compounding-Pharmacy/">https://rankfortressss.github.io/Compounding-Pharmacy/</a><br>
                 <br>
             </section>
 
