--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
                 <br>
                 <a target="_bLank" href="https://rankfortresss.s3.us-east-005.backblazeb2.com/Compounding+Pharmacy/index.html">https://rankfortresss.s3.us-east-005.backblazeb2.com/Compounding+Pharmacy/index.html</a><br>
                 <br>
-                <a target="_bLank" href="https://rankfortresss.s3.us-east-005.backblazeb2.com/Compounding+Pharmacy/index.html">https://rankfortresss.s3.us-east-005.backblazeb2.com/Compounding+Pharmacy/index.html</a><br>
-                <br>
                 <a target="_bLank" href="https://rankfortressss.github.io/Compounding-Pharmacy/">https://rankfortressss.github.io/Compounding-Pharmacy/</a><br>
+                <br>
+                <a target="_bLank" href="https://compounding-pharmacy.netlify.app/">https://compounding-pharmacy.netlify.app/</a><br>
                 <br>
             </section>
 
